Render messages on the UI

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -79,3 +79,9 @@ input {
 .location-icon {
   width: 40px;
 }
+
+.messages-list p {
+  color: var(--black);
+  letter-spacing: .5px;
+  font-size: 18px;
+}
