Render messages and location in UI

--- a/src/styles.css
+++ b/src/styles.css
@@ -79,3 +79,13 @@ input {
 .location-icon {
   width: 40px;
 }
+
+.messages-list p {
+  color: var(--black);
+  letter-spacing: .5px;
+  font-size: 18px;
+}
+
+a {
+  color: var(--blue);
+}
