--- a/src/styles.css
+++ b/src/styles.css
@@ -42,7 +42,7 @@ button[disabled] {
   display: flex;
   align-items: baseline;
   gap: 20px;
-  margin-bottom: 70px;
+  margin-bottom: 30px;
   padding-bottom: 30px;
   color: var(--darkblue);
   border-bottom: 2px dashed var(--lightblue);
@@ -59,6 +59,7 @@ button[disabled] {
 form {
   display: flex;
   gap: 10px;
+  margin-bottom: 0;
 }
 
 input {
@@ -80,7 +81,12 @@ input {
   width: 40px;
 }
 
-.messages-list p {
+.messages {
+  height: calc(100vh - 250px);
+  overflow: auto;
+}
+
+.message {
   color: var(--black);
   letter-spacing: .5px;
   font-size: 18px;
@@ -88,4 +94,19 @@ input {
 
 a {
   color: var(--blue);
+  font-size: 18px;
+}
+
+.date-time {
+  color: var(--black);
+  opacity: 0.4;
+  font-size: 16px;
+  font-style: italic;
+}
+
+.controls {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  flex-wrap: wrap;
 }
