--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -13,6 +13,7 @@ body {
 button {
   background-color: var(--blue);
   padding: 12px 20px;
+  min-width: 150px;
   color: var(--white);
   font-size: 16px;
   font-weight: 600;
@@ -34,6 +35,20 @@ button[disabled] {
   cursor: not-allowed;
 }
 
+.home-page {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: var(--darkblue);
+}
+
+.join-form {
+  background-color: var(--white);
+  padding: 0 40px 30px;
+  width: 500px;
+}
+
 .chat-section {
   padding: 10px;
 }
@@ -44,9 +59,17 @@ button[disabled] {
   gap: 20px;
   margin-bottom: 30px;
   padding-bottom: 30px;
-  color: var(--darkblue);
   border-bottom: 2px dashed var(--lightblue);
+}
+
+.title,
+.title > * {
   font-size: 40px;
+  color: var(--darkblue);
+}
+
+.title > a {
+  text-decoration: none;
 }
 
 .chat-icon {
@@ -62,14 +85,34 @@ form {
   margin-bottom: 0;
 }
 
+form.vertical {
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+label {
+  display: flex;
+  align-items: center;
+}
+
+.label {
+  flex: 0 0 150px;
+  font-size: 18px;
+}
+
 input {
   width: 300px;
+  flex: 0 0 300px;
   height: 43px;
   padding: 0 10px;
   font-size: 18px;
   color: var(--black);
   border: 1px solid var(--lightblue);
   border-radius: 5px;
+}
+
+.join-button {
+  margin-top: 20px;
 }
 
 .location {
