Read chat params from query, display room name, scope messages to rooms
TODO: track users in relation to rooms

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -130,9 +130,15 @@ input {
 }
 
 .message {
+  display: block;
+  margin-top: 10px;
   color: var(--black);
   letter-spacing: .5px;
   font-size: 18px;
+}
+
+.user-name {
+  font-weight: bold;
 }
 
 a {
