Display user names with messages; add user to the chat title

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -51,6 +51,11 @@ button[disabled] {
   width: 500px;
 }
 
+.room,
+.user-name {
+  color: var(--medblue);
+}
+
 .chat-section {
   padding: 10px;
 }
