--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -140,12 +140,18 @@ input {
   width: 20px;
 }
 
+.messages-wrapper {
+  display: flex;
+  flex-direction: column-reverse;
+  height: calc(100vh - 340px);
+  overflow: auto;
+  padding-bottom: 20px;
+}
+
 .messages {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
-  height: calc(100vh - 300px);
-  overflow: auto;
+  align-items: flex-start;
 }
 
 .message {
@@ -175,6 +181,18 @@ a {
   opacity: 0.4;
   font-size: 16px;
   font-style: italic;
+}
+
+.current-user {
+  margin-bottom: 10px;
+  border-radius: 10px;
+  padding: 5px 35px 5px 15px;
+  align-self: flex-end;
+  background-color: var(--medblue);
+}
+
+.current-user * {
+  color: var(--white);
 }
 
 .controls {
