--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -8,6 +8,7 @@
 }
 
 body {
+  margin: 0;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   color: var(--black);
 }
@@ -19,7 +20,7 @@ button {
   color: var(--white);
   font-size: 16px;
   font-weight: 600;
-  letter-spacing: 0.5px;
+  letter-spacing: .5px;
   border: 0;
   border-radius: 5px;
   cursor: pointer;
@@ -57,7 +58,44 @@ button[disabled] {
 }
 
 .chat-section {
-  padding: 10px;
+  display: flex;
+  height: 100vh;
+  padding-left: 225px;
+}
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 225px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  color: var(--white);
+  background-color: var(--darkblue);
+}
+
+.sidebar-content {
+  padding: 20px;
+}
+
+.users-list {
+  margin: 0;
+  padding-left: 0;
+  list-style-type: none;
+}
+
+.users-list li {
+  margin: 5px 0;
+  color: var(--lightblue);
+}
+
+.chat-section-content {
+  flex-basis: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 10px 10px 10px 20px;
 }
 
 .title {
@@ -143,7 +181,8 @@ input {
 .messages-wrapper {
   display: flex;
   flex-direction: column-reverse;
-  height: calc(100vh - 340px);
+  height: calc(100vh - 250px);
+  min-height: 200px;
   overflow: auto;
   padding-bottom: 20px;
 }
@@ -198,6 +237,7 @@ a {
 .controls {
   display: flex;
   align-items: center;
+  flex: 0 0 50px;
   gap: 30px;
   overflow: auto;
 }
