--- a/src/styles.css
+++ b/src/styles.css
@@ -3,16 +3,20 @@
   --black: #424242;
   --lightblue: lightblue;
   --blue: #20b7e8;
-  --darkblue: #1090ca;
+  --medblue: #1090ca;
+  --darkblue: #054f71;
 }
 
 body {
+  margin: 0;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  color: var(--black);
 }
 
 button {
   background-color: var(--blue);
   padding: 12px 20px;
+  min-width: 150px;
   color: var(--white);
   font-size: 16px;
   font-weight: 600;
@@ -25,7 +29,7 @@ button {
 }
 
 button:hover:not([disabled]) {
-  background-color: var(--darkblue);
+  background-color: var(--medblue);
 }
 
 button[disabled] {
@@ -34,8 +38,59 @@ button[disabled] {
   cursor: not-allowed;
 }
 
+.home-page {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: var(--darkblue);
+}
+
+.join-form {
+  background-color: var(--white);
+  padding: 0 40px 30px;
+  width: 500px;
+}
+
+.room,
+.user-name {
+  color: var(--medblue);
+}
+
 .chat-section {
-  padding: 10px;
+  display: flex;
+  height: 100vh;
+}
+
+.sidebar {
+  flex: 0 0 225px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  color: var(--white);
+  background-color: var(--darkblue);
+}
+
+.sidebar-content {
+  padding: 20px;
+}
+
+.users-list {
+  margin: 0;
+  padding-left: 0;
+  list-style-type: none;
+}
+
+.users-list li {
+  color: var(--lightblue);
+}
+
+.chat-section-content {
+  flex-basis: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 10px 10px 10px 20px;
 }
 
 .title {
@@ -44,9 +99,17 @@ button[disabled] {
   gap: 20px;
   margin-bottom: 30px;
   padding-bottom: 30px;
-  color: var(--darkblue);
   border-bottom: 2px dashed var(--lightblue);
+}
+
+.title,
+.title > * {
   font-size: 40px;
+  color: var(--medblue);
+}
+
+.title > a {
+  text-decoration: none;
 }
 
 .chat-icon {
@@ -62,8 +125,24 @@ form {
   margin-bottom: 0;
 }
 
+form.vertical {
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+label {
+  display: flex;
+  align-items: center;
+}
+
+.label {
+  flex: 0 0 150px;
+  font-size: 18px;
+}
+
 input {
   width: 300px;
+  flex: 0 0 300px;
   height: 43px;
   padding: 0 10px;
   font-size: 18px;
@@ -72,24 +151,58 @@ input {
   border-radius: 5px;
 }
 
+.join-button {
+  margin-top: 20px;
+}
+
 .location {
   display: flex;
   gap: 10px;
+  white-space: nowrap;
+}
+
+.location-button {
+  display: flex;
+  padding-left: 10px;
+  gap: 10px;
+  align-items: center;
 }
 
 .location-icon {
-  width: 40px;
+  flex-basis: 20px;
+  width: 20px;
+}
+
+.messages-wrapper {
+  display: flex;
+  flex-direction: column-reverse;
+  height: calc(100vh - 250px);
+  min-height: 200px;
+  overflow: auto;
+  padding-bottom: 20px;
 }
 
 .messages {
-  height: calc(100vh - 250px);
-  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .message {
+  display: block;
+  margin-top: 10px;
   color: var(--black);
   letter-spacing: .5px;
   font-size: 18px;
+}
+
+.user-name {
+  font-weight: bold;
+}
+
+.message-text {
+  display: block;
+  margin-top: 10px;
 }
 
 a {
@@ -104,9 +217,21 @@ a {
   font-style: italic;
 }
 
+.current-user {
+  margin-bottom: 10px;
+  border-radius: 10px;
+  padding: 5px 35px 5px 15px;
+  align-self: flex-end;
+  background-color: var(--medblue);
+}
+
+.current-user * {
+  color: var(--white);
+}
+
 .controls {
   display: flex;
   align-items: center;
   gap: 30px;
-  flex-wrap: wrap;
+  overflow: auto;
 }
